--- a/Prj.TaskManager/appsettings.json
+++ b/Prj.TaskManager/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=TaskDB;User Id=sa;Password=riddhasoft;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=TaskDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
